Fix ObjectOptimisticLockingFailureException on Stock and Plat editing
1. Changed Set<Ingredient> to List<Ingredient> in Plat.java to allow proper index-based form binding in Thymeleaf, which prevents orphan removal errors when saving Plats.
2. Updated StockController.java to explicitly merge incoming updates to existing Produit entities rather than blindly re-saving detached instances, which resolves locking and cascade issues.
3. Updated tests to reflect the change from Set to List for Ingredients.

Co-authored-by: wasmed <66112691+wasmed@users.noreply.github.com>